# jira-ticket-creator

./: .gitignore  .jirarc.example  .pre-commit-config.yaml  Makefile  README.md  go.mod  go.sum  jira.go  jira_test.go  main.go
.claude/: project-config.md
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  go-tests.yml  python-publish.yml  python-tests.yml  release.yml
cmd/jira-ticket-creator/: main.go
docs/: Gemfile  Makefile  README.md  _config.yml  advanced.md  api.md  cli.md  examples.md  getting-started.md  index.md  troubleshooting.md
docs/_data/: nav.yml
docs/advanced/: project-mapping.md
docs/api/: go-client.md
docs/cli/: create.md  gantt.md  import.md  query.md  search.md
docs/examples/: api-examples.md  effort-dashboards.md  effort-management.md  team-coordination.md  workflows.md
internal/api/: capi.go  main.go
internal/batch/: csv_parser.go  csv_parser_test.go  json_parser.go  json_parser_test.go  processor.go
internal/config/: config.go  config_test.go  defaults.go  project_mapping.go
internal/interactive/: prompt.go  wizard.go
internal/jira/: client.go  errors.go  issues.go  keys.go  keys_test.go  links.go  types.go  validation.go  validation_test.go
internal/reports/: csv.go  gantt.go  html.go  json.go  markdown.go  pm_report.go  reporter.go  table.go  team_report.go  visualizer.go
internal/storage/: json.go  json_test.go  repository.go
internal/templates/: builtin.go  template.go
pkg/cli/: errors.go
pkg/cli/commands/: batch.go  completion.go  create.go  gantt.go  import.go  pm.go  query.go  report.go  root.go  search.go  team.go  template.go  timeline.go  transition.go  update.go  visualize.go
python/: MANIFEST.in  PUBLISHING.md  README.md  __init__.py  example.py  jira_client.py  libjira.h  pyproject.toml  setup.py
python/tests/: __init__.py  test_jira_client.py
